--- a/.github/workflows/third-party.yml
+++ b/.github/workflows/third-party.yml
@@ -130,8 +130,7 @@ jobs:
     - name: Checkout openapi-python-client
       uses: actions/checkout@v4
       with:
-        repository: Viicos/openapi-python-client
-        ref: 'model-rebuild'
+        repository: openapi-generators/openapi-python-client
 
     - name: Checkout Pydantic
       uses: actions/checkout@v4
@@ -164,12 +163,14 @@ jobs:
     needs:
       - test-fastapi
       - test-sqlmodel
+      - test-openapi-python-client
     if: |
       github.repository == 'pydantic/pydantic' &&
       github.event_name == 'schedule' &&
       (
         needs.test-fastapi.result == 'failure' ||
-        needs.test-sqlmodel.result == 'failure'
+        needs.test-sqlmodel.result == 'failure' ||
+        needs.test-openapi-python-client.result == 'failure'
       )
     permissions:
       issues: write
