--- a/.github/workflows/third-party.yml
+++ b/.github/workflows/third-party.yml
@@ -2,6 +2,12 @@
 # https://github.com/python/typing_extensions/blob/main/.github/workflows/third_party.yml.
 # Running the tests of various third-party libraries that use Pydantic. This helps us spot regressions early, and helps
 # flag when third-party libraries are making incorrect assumptions that might cause them to break when we cut a new release.
+# Instructions:
+# - The CI should be as close as possible to the original project's workflows.
+# - Use the checkout action to clone Pydantic with a custom path (e.g. `path: pydantic-latest`).
+# - Make sure Pydantic is installed in editable mode (e.g. `uv pip install -e ./pydantic-latest`)
+#   so that the path appears in the `pip list` output (and so we can be assured Pydantic was properly
+#   installed from the provided path).
 name: Third party tests
 
 on:
@@ -63,7 +69,7 @@ jobs:
       run: |
         uv venv --python ${{ matrix.python-version }}
         uv pip install -r requirements-tests.txt
-        uv pip install ./pydantic-latest
+        uv pip install -e ./pydantic-latest
 
     - name: List installed dependencies
       run: uv pip list
@@ -105,7 +111,7 @@ jobs:
       run: |
         uv venv --python ${{ matrix.python-version }}
         uv pip install -r requirements-tests.txt
-        uv pip install ./pydantic-latest
+        uv pip install -e ./pydantic-latest
 
     - name: List installed dependencies
       run: uv pip list
@@ -150,7 +156,7 @@ jobs:
       run: |
         pip install .[test,ci]
         pip uninstall --yes pydantic
-        pip install ./pydantic-latest
+        pip install -e ./pydantic-latest
 
     - name: List installed dependencies
       run: pip list
@@ -204,7 +210,7 @@ jobs:
         pdm install --quiet
         pdm run python -m ensurepip
         pdm run python -m pip uninstall --yes pydantic
-        pdm run python -m pip install ./pydantic-latest
+        pdm run python -m pip install -e ./pydantic-latest
 
     - name: List installed dependencies
       run: pdm list
@@ -248,7 +254,7 @@ jobs:
         pip install uv
         uv pip install --system -r requirements.in
         uv pip uninstall --system pydantic pydantic-core
-        uv pip install --system ./pydantic-latest
+        uv pip install --system -e ./pydantic-latest
 
     - name: List installed dependencies
       run: uv pip list
