--- a/.github/workflows/third-party.yml
+++ b/.github/workflows/third-party.yml
@@ -312,6 +312,8 @@ jobs:
       - name: Run all tests
         run: |
           ls
+          cd odmantic
+          ls
           pytest odmantic/tests
         env:
           TEST_MONGO_URI: ${{ steps.mongo-service.outputs.connection-string }}
