--- a/.github/workflows/third-party.yml
+++ b/.github/workflows/third-party.yml
@@ -264,6 +264,59 @@ jobs:
       # Instead, manually run pytest (we run core and FastAPI tests):
       run: pytest tests/core tests/fastapi
 
+  test-odmantic:
+    name: Test ODMantic (main branch) on Python ${{ matrix.python-version }}
+    # If 'schedule' was the trigger, don't run it on contributors' forks
+    if: |
+      github.event_name == 'workflow_dispatch' ||
+      (github.event_name == 'schedule' && github.repository == 'pydantic/pydantic') ||
+      (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'third-party-tests'))
+
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ['3.8', '3.9', '3.10', '3.11']
+
+    steps:
+      - name: Checkout ODMantic
+        uses: actions/checkout@v4
+        with:
+          repository: sydney-runkle/odmantic
+          ref: fix-model-fields-access
+
+      - name: Checkout Pydantic
+        uses: actions/checkout@v4
+        with:
+          path: pydantic-latest
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Mongo service
+        id: mongo-service
+        uses: art049/mongodb-cluster-action@v0
+        with:
+          version: 6
+          mode: standalone
+
+      - name: Install ODMantic dependencies
+        run: |
+          pip install ".[test]"
+          pip uninstall --yes pydantic
+          pip install -e ./pydantic-latest
+
+      - name: List installed dependencies
+        run: pip list
+
+      - name: Run ODMantic tests
+        run: pytest tests
+        env:
+          TEST_MONGO_URI: ${{ steps.mongo-service.outputs.connection-string }}
+          TEST_MONGO_MODE: standalone
+
   create-issue-on-failure:
     name: Create an issue if tests failed
     runs-on: ubuntu-latest
@@ -273,6 +326,7 @@ jobs:
       - test-beanie
       - test-openapi-python-client
       - test-pandera
+      - test-odmantic
     if: |
       github.repository == 'pydantic/pydantic' &&
       github.event_name == 'schedule' &&
@@ -281,7 +335,8 @@ jobs:
         needs.test-sqlmodel.result == 'failure' ||
         needs.test-beanie.result == 'failure' ||
         needs.test-openapi-python-client.result == 'failure' ||
-        needs.test-pandera.result == 'failure'
+        needs.test-pandera.result == 'failure' ||
+        needs.test-odmantic.result == 'failure'
       )
     permissions:
       issues: write
