--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,12 +25,13 @@ jobs:
 
       - uses: astral-sh/setup-uv@v5
         with:
-          enable-cache: true
           python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
-        run: uv sync --group linting --all-extras
-
+        # Installing pip is required for the pre-commit action:
+        run: |
+          uv sync --group linting --all-extras
+          uv pip install pip
       - uses: pre-commit/action@v3.0.1
         with:
           extra_args: --all-files --verbose
@@ -44,7 +45,6 @@ jobs:
 
     - uses: astral-sh/setup-uv@v5
       with:
-        enable-cache: true
         python-version: '3.12'
 
     - name: Install dependencies
@@ -75,7 +75,6 @@ jobs:
 
       - uses: astral-sh/setup-uv@v5
         with:
-          enable-cache: true
           python-version: '3.12'
 
       - name: install deps
@@ -126,7 +125,6 @@ jobs:
 
     - uses: astral-sh/setup-uv@v5
       with:
-        enable-cache: true
         python-version: ${{ matrix.python-version }}
 
     - name: Install dependencies
@@ -208,7 +206,6 @@ jobs:
 
     - uses: astral-sh/setup-uv@v5
       with:
-        enable-cache: true
         python-version: ${{ matrix.python-version }}
 
     - name: Install dependencies
@@ -241,7 +238,6 @@ jobs:
 
     - uses: astral-sh/setup-uv@v5
       with:
-        enable-cache: true
         python-version: '3.12'
 
     - name: Install dependencies
@@ -332,7 +328,6 @@ jobs:
 
     - uses: astral-sh/setup-uv@v5
       with:
-        enable-cache: true
         python-version: ${{ matrix.python-version }}
 
     - name: Install dependencies
