--- a/.github/workflows/docs-update.yml
+++ b/.github/workflows/docs-update.yml
@@ -23,6 +23,7 @@ jobs:
           python-version: '3.12'
 
       - name: Install dependencies
+        # Installing pip is required for the pre-commit action:
         run: |
           uv sync --group linting --all-extras
           uv pip install pip
