--- a/.github/workflows/dependencies-check.yml
+++ b/.github/workflows/dependencies-check.yml
@@ -31,7 +31,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ['3.8', '3.11']
+        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
         PYTHON_DEPENDENCY_CASE: ${{ fromJSON(needs.find_dependency_cases.outputs.PYTHON_DEPENDENCY_CASES) }}
 
     runs-on: ubuntu-latest
