remove logic unique to 3.8

--- a/tests/mypy/configs/mypy-default.ini
+++ b/tests/mypy/configs/mypy-default.ini
@@ -12,9 +12,7 @@ python_version = 3.10
 # for strict mypy: (this is the tricky one :-))
 disallow_untyped_defs = True
 
-# TODO 3.9 drop the following line:
-force_uppercase_builtins = True
-# TODO 3.10 drop the following line:
+# TODO: when we drop 3.9, drop the following line:
 force_union_syntax = True
 
 [mypy-pydantic_core.*]
