--- a/tests/mypy/configs/mypy-plugin-strict.ini
+++ b/tests/mypy/configs/mypy-plugin-strict.ini
@@ -12,9 +12,7 @@ disallow_untyped_defs = True
 
 python_version = 3.10
 
-# TODO 3.9 drop the following line:
-force_uppercase_builtins = True
-# TODO 3.10 drop the following line:
+# TODO: when we drop 3.9, drop the following line:
 force_union_syntax = True
 
 [pydantic-mypy]
