--- a/tests/mypy/configs/mypy-plugin-very-strict.ini
+++ b/tests/mypy/configs/mypy-plugin-very-strict.ini
@@ -5,9 +5,7 @@ follow_imports = silent
 
 python_version = 3.10
 
-# TODO 3.9 drop the following line:
-force_uppercase_builtins = True
-# TODO 3.10 drop the following line:
+# TODO: when we drop 3.9, drop the following line:
 force_union_syntax = True
 
 [pydantic-mypy]
