--- a/tests/mypy/configs/pyproject-plugin-strict-equality.toml
+++ b/tests/mypy/configs/pyproject-plugin-strict-equality.toml
@@ -37,9 +37,7 @@ strict_equality = true
 
 python_version = '3.10'
 
-# TODO 3.9 drop the following line:
-force_uppercase_builtins = true
-# TODO 3.10 drop the following line:
+# TODO: when we drop 3.9, drop the following line:
 force_union_syntax = true
 
 [tool.pydantic-mypy]
