--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,8 @@ dev = [
     'jsonschema',
 ]
 docs = [
+    "algoliasearch>=4.12.0",
+    "bs4>=0.0.2",
     'autoflake',
     'mkdocs',
     'mkdocs-exclude',
